--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,1 +1,5 @@
-Welcome to Taylor Plumbing
+Taylor Built is a family owned business owned and operated in San Diego,
+CA. Offering a wide range of skills and services, from plumbing to
+welding, coring and demolition, our services come with a personal touch.
+We are eager to provide you with the professional and efficient service
+you deserve.
