--- a/assets/css/taylor.scss
+++ b/assets/css/taylor.scss
@@ -43,10 +43,11 @@
 }
 
 .jumbotron p {
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 300;
   line-height: 1.25;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
+  margin-top: 40px;
 }
 
 /*
