--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
 <div class="taylor-contact">
   <ul>
-    <li>David Taylor</li>
-    <li>858-555-1234</li>
-    <li>david.pond.taylor@gmail.com</li>
+    <li><i class="icon-beer"></i> David Taylor</li>
+    <li><i class="icon-phone"></i> 858-555-1234</li>
+    <li><i class="icon-envelope-alt"></i> david.pond.taylor@gmail.com</li>
   </ul>
 </div>
