Add the final images and clean up some wording.

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
 <div class="taylor-contact">
   <ul>
-    <li><i class="icon-beer"></i> David Taylor</li>
-    <li><i class="icon-phone"></i> 858-555-1234</li>
-    <li><i class="icon-envelope-alt"></i> david.pond.taylor@gmail.com</li>
+    <li><i class="icon-wrench muted"></i> David Taylor</li>
+    <li><i class="icon-phone muted"></i> 858-248-3105</li>
+    <li><i class="icon-envelope-alt muted"></i> david.pond.taylor@gmail.com</li>
   </ul>
 </div>
