--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>Taylor Plumbing</title>
+    <title>Taylor Built</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Taylor Plumbing and Handyman Stuff">
+    <meta name="description" content="Taylor Built - Plumbing, Welding, Coring, Demolition">
     <meta name="author" content="Dan Knox <dknox@threedotloft.com>">
 
     <!-- Bootstrap -->
@@ -45,7 +45,7 @@
       <div class="content-wrapper">
         <div id="home" class="jumbotron">
           <p>
-            <img class="taylor-van" src="/assets/img/van.JPG" alt="Taylor Plumbing">
+            <img class="taylor-van" src="/assets/img/taylor_van.png" alt="Taylor Plumbing">
           </p>
           <p class="well well-large well-transparent taylor-introduction">
             <i class="icon-quote-left icon-4x pull-left icon-muted"></i>
