--- a/assets/css/taylor.css
+++ b/assets/css/taylor.css
@@ -23,6 +23,7 @@ body {
 /* Main Navigation */
 .taylor-logo {
   color: black;
+  font-size: 34.5px;
 }
 
 .masthead {
@@ -40,7 +41,7 @@ body {
 }
 
 #main-navigation {
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 /* Contact Information */
@@ -50,12 +51,13 @@ body {
   margin-right: auto;
   font-size: 15px;
   font-weight: 500;
+  text-transform: uppercase;
 }
 
 .taylor-contact li {
   list-style-type: none;
   float: left;
-  margin-right: 60px;
+  margin-right: 30px;
 }
 
 .taylor-contact li:last-child {
